--- a/_posts/2019-01-16-ns-102.html
+++ b/_posts/2019-01-16-ns-102.html
@@ -9,11 +9,11 @@ jenis: sepatu-sport-pria
 brand: catenzo
 description: Sepatu Sport Pria Bahan SINTETIS, Warna BIRU KOMBINASI, Size 38 ~ 43
 image: https://images.lipatan.com/katalog-catenzo-2019/foto-produk-satuan/ns-102.jpg
-image1: "-/-"
-image2: "-/-"
-image3: "-/-"
-image4: "-/-"
-image5: "-/-"
+image1: https://images.lipatan.com/foto-berbagai-sudut/catenzo/ns-102-a.jpg
+image2: https://images.lipatan.com/foto-berbagai-sudut/catenzo/ns-102-b.jpg
+image3: https://images.lipatan.com/foto-berbagai-sudut/catenzo/ns-102-c.jpg
+image4: https://images.lipatan.com/foto-berbagai-sudut/catenzo/ns-102-d.jpg
+image5: https://images.lipatan.com/foto-berbagai-sudut/raindoz/ns-102-e.jpg
 product: Sepatu Futsal Pria - NS 102
 price: Rp 184.900
 hargadropship: Rp 150.900
@@ -71,6 +71,16 @@ kondisi: Baru
          </ol>         
          <p>Sepatu Futsal Pria - NS 102 adalah salah satu produk merek Catenzo. Produk fashion handmade asal Bandung yang nyaman digunakan dan tidak pasaran. Cocok untuk Anda agar terlihat lebih gaya, tampil berbeda dan percaya diri. <br/>Kode : NS 102<br/>Warna : BIRU KOMBINASI<br/>Bahan : SINTETIS<br/>Ukuran : 38 ~ 43<br/>Berat : 850 gram<br/>Info Lainnya = SOL : RUBBER<br/>Yuk dibeli kak sebelum kehabisan. Sebelum membeli, harap cek/konfirmasi stok dulu ya kak, karena perputaran barang sangat cepat.<br>
          </p>
+
+         <p><b>Gambar lain :</b></p>
+                    <div class="add-image">
+                      <a href="{{ page.image1 }}" target="_blank" title="{{ page.product }}"><img src="{{ page.image1 }}" onerror="this.src='{{ site.url }}/img/not-found.png'" alt="" title="Klik untuk memperbesar" /></a>
+                      <a href="{{ page.image2 }}" target="_blank" title="{{ page.product }}"><img src="{{ page.image2 }}" onerror="this.src='{{ site.url }}/img/not-found.png'" alt="" title="Klik untuk memperbesar" /></a>
+                      <a href="{{ page.image3 }}" target="_blank" title="{{ page.product }}"><img src="{{ page.image3 }}" onerror="this.src='{{ site.url }}/img/not-found.png'" alt="" title="Klik untuk memperbesar" /></a>
+                      <a href="{{ page.image4 }}" target="_blank" title="{{ page.product }}"><img src="{{ page.image4 }}" onerror="this.src='{{ site.url }}/img/not-found.png'" alt="" title="Klik untuk memperbesar" /></a>
+                      <a href="{{ page.image5 }}" target="_blank" title="{{ page.product }}"><img src="{{ page.image5 }}" onerror="this.src='{{ site.url }}/img/not-found.png'" alt="" title="Klik untuk memperbesar" /></a>                                            
+                    </div>
+                    <br/>
 
          <p style="background-color: #5cb85c; color: #ffffff; padding: 5px; text-align: justify; display: inline-block; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
          Gudang : WRH-1<br>
